
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






struct clk {int dummy; } ;


 int BCM63XX_RESET_ENETSW ;
 scalar_t__ BCMCPU_IS_6328 () ;
 scalar_t__ BCMCPU_IS_6362 () ;
 scalar_t__ BCMCPU_IS_6368 () ;
 int CKCTL_6328_ROBOSW_EN ;
 int CKCTL_6362_ROBOSW_EN ;
 int CKCTL_6368_ROBOSW_EN ;
 int bcm63xx_core_set_reset (int ,int) ;
 int bcm_hwclock_set (int ,int) ;
 int clk_disable_unlocked (int *) ;
 int clk_enable_unlocked (int *) ;
 int clk_swpkt_sar ;
 int clk_swpkt_usb ;
 int msleep (int) ;

__attribute__((used)) static void enetsw_set(struct clk *clk, int enable)
{
 if (BCMCPU_IS_6328()) {
  bcm_hwclock_set(CKCTL_6328_ROBOSW_EN, enable);
 } else if (BCMCPU_IS_6362()) {
  bcm_hwclock_set(CKCTL_6362_ROBOSW_EN, enable);
 } else if (BCMCPU_IS_6368()) {
  if (enable) {
   clk_enable_unlocked(&clk_swpkt_sar);
   clk_enable_unlocked(&clk_swpkt_usb);
  } else {
   clk_disable_unlocked(&clk_swpkt_usb);
   clk_disable_unlocked(&clk_swpkt_sar);
  }
  bcm_hwclock_set(CKCTL_6368_ROBOSW_EN, enable);
 } else {
  return;
 }

 if (enable) {

  bcm63xx_core_set_reset(BCM63XX_RESET_ENETSW, 1);
  msleep(10);
  bcm63xx_core_set_reset(BCM63XX_RESET_ENETSW, 0);
  msleep(10);
 }
}
