; ModuleID = '/home/carl/AnghaBench/linux/arch/mips/bcm63xx/extr_clk.c_enetsw_set.c'
source_filename = "/home/carl/AnghaBench/linux/arch/mips/bcm63xx/extr_clk.c_enetsw_set.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.clk = type { i32 }

@CKCTL_6328_ROBOSW_EN = common dso_local global i32 0, align 4
@CKCTL_6362_ROBOSW_EN = common dso_local global i32 0, align 4
@clk_swpkt_sar = common dso_local global i32 0, align 4
@clk_swpkt_usb = common dso_local global i32 0, align 4
@CKCTL_6368_ROBOSW_EN = common dso_local global i32 0, align 4
@BCM63XX_RESET_ENETSW = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.clk*, i32)* @enetsw_set to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @enetsw_set(%struct.clk* %0, i32 %1) #0 {
  %3 = alloca %struct.clk*, align 8
  %4 = alloca i32, align 4
  store %struct.clk* %0, %struct.clk** %3, align 8
  store i32 %1, i32* %4, align 4
  %5 = call i64 (...) @BCMCPU_IS_6328()
  %6 = icmp ne i64 %5, 0
  br i1 %6, label %7, label %11

7:                                                ; preds = %2
  %8 = load i32, i32* @CKCTL_6328_ROBOSW_EN, align 4
  %9 = load i32, i32* %4, align 4
  %10 = call i32 @bcm_hwclock_set(i32 %8, i32 %9)
  br label %37

11:                                               ; preds = %2
  %12 = call i64 (...) @BCMCPU_IS_6362()
  %13 = icmp ne i64 %12, 0
  br i1 %13, label %14, label %18

14:                                               ; preds = %11
  %15 = load i32, i32* @CKCTL_6362_ROBOSW_EN, align 4
  %16 = load i32, i32* %4, align 4
  %17 = call i32 @bcm_hwclock_set(i32 %15, i32 %16)
  br label %36

18:                                               ; preds = %11
  %19 = call i64 (...) @BCMCPU_IS_6368()
  %20 = icmp ne i64 %19, 0
  br i1 %20, label %21, label %34

21:                                               ; preds = %18
  %22 = load i32, i32* %4, align 4
  %23 = icmp ne i32 %22, 0
  br i1 %23, label %24, label %27

24:                                               ; preds = %21
  %25 = call i32 @clk_enable_unlocked(i32* @clk_swpkt_sar)
  %26 = call i32 @clk_enable_unlocked(i32* @clk_swpkt_usb)
  br label %30

27:                                               ; preds = %21
  %28 = call i32 @clk_disable_unlocked(i32* @clk_swpkt_usb)
  %29 = call i32 @clk_disable_unlocked(i32* @clk_swpkt_sar)
  br label %30

30:                                               ; preds = %27, %24
  %31 = load i32, i32* @CKCTL_6368_ROBOSW_EN, align 4
  %32 = load i32, i32* %4, align 4
  %33 = call i32 @bcm_hwclock_set(i32 %31, i32 %32)
  br label %35

34:                                               ; preds = %18
  br label %47

35:                                               ; preds = %30
  br label %36

36:                                               ; preds = %35, %14
  br label %37

37:                                               ; preds = %36, %7
  %38 = load i32, i32* %4, align 4
  %39 = icmp ne i32 %38, 0
  br i1 %39, label %40, label %47

40:                                               ; preds = %37
  %41 = load i32, i32* @BCM63XX_RESET_ENETSW, align 4
  %42 = call i32 @bcm63xx_core_set_reset(i32 %41, i32 1)
  %43 = call i32 @msleep(i32 10)
  %44 = load i32, i32* @BCM63XX_RESET_ENETSW, align 4
  %45 = call i32 @bcm63xx_core_set_reset(i32 %44, i32 0)
  %46 = call i32 @msleep(i32 10)
  br label %47

47:                                               ; preds = %34, %40, %37
  ret void
}

declare dso_local i64 @BCMCPU_IS_6328(...) #1

declare dso_local i32 @bcm_hwclock_set(i32, i32) #1

declare dso_local i64 @BCMCPU_IS_6362(...) #1

declare dso_local i64 @BCMCPU_IS_6368(...) #1

declare dso_local i32 @clk_enable_unlocked(i32*) #1

declare dso_local i32 @clk_disable_unlocked(i32*) #1

declare dso_local i32 @bcm63xx_core_set_reset(i32, i32) #1

declare dso_local i32 @msleep(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
